tests/base/invalid/Return_CompileFail_3.whiley
import * from whiley.lang.*

bool f(int x, int y):
    return x+y
